// Vitest Snapshot v1

exports[`asciimath > should parse integrals 1`] = `
[
  {
    "current": 3,
    "isKeyWord": true,
    "tex": "\\\\int",
    "type": "Const",
    "value": "int",
  },
  {
    "current": 7,
    "isKeyWord": false,
    "tex": "e",
    "type": "Text",
    "value": "e",
  },
  {
    "current": 8,
    "isKeyWord": true,
    "tex": "^{ $1 }",
    "type": "OperatorSup",
    "value": "^",
  },
  {
    "current": 9,
    "isKeyWord": true,
    "tex": "{-$1 }",
    "type": "OperatorMinus",
    "value": "-",
  },
  {
    "current": 10,
    "isKeyWord": false,
    "tex": "x",
    "type": "StringLiteral",
    "value": "x",
  },
  {
    "current": 12,
    "isKeyWord": false,
    "tex": "d",
    "type": "StringLiteral",
    "value": "d",
  },
  {
    "current": 13,
    "isKeyWord": false,
    "tex": "x",
    "type": "StringLiteral",
    "value": "x",
  },
]
`;

exports[`asciimath > should parse integrals 2`] = `
{
  "body": [
    {
      "tex": "\\\\int",
      "type": "Const",
      "value": "int",
    },
    {
      "body": [
        {
          "tex": "\\\\text{e}",
          "type": "Const",
          "value": "e",
        },
        {
          "params": {
            "params": {
              "tex": "x",
              "type": "Const",
              "value": "x",
            },
            "tex": "{-$1 }",
            "type": "ParamOne",
          },
          "tex": "^{ $1 }",
          "type": "ParamOne",
        },
      ],
      "type": "Flat",
    },
    {
      "tex": "d",
      "type": "Const",
      "value": "d",
    },
    {
      "tex": "x",
      "type": "Const",
      "value": "x",
    },
  ],
  "type": "Root",
}
`;

exports[`asciimath > should parse integrals 3`] = `"\\\\int \\\\text{e} ^{ {-x } } d x"`;
